name: @pedrosantana-dev/tudolivre

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tudolivre",
+  "name": "@pedrosantana-dev/tudolivre",
   "version": "1.0.0",
   "description": "Consultas de informações livres do Brasil\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[Dpublicas do Brasil",
   "main": "index.js",
