--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@pedrosantana-dev/tudolivre",
+  "name": "tudolivre",
   "version": "1.0.0",
-  "description": "Consultas de informações livres do Brasil\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[Dpublicas do Brasil",
+  "description": "Consultas de informações publicas do Brasil",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
